--- a/TolkesentralenLH/TolkesentralenLH/Views/Shared/_Layout.cshtml
+++ b/TolkesentralenLH/TolkesentralenLH/Views/Shared/_Layout.cshtml
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <meta name="description" content="The description of my page" />
+    <link href="~/Content/bootstrap-lemen.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
