update14/02/17 New methods

--- a/TolkesentralenLH/TolkesentralenLH/Views/Home/RegistrerTolk.cshtml
+++ b/TolkesentralenLH/TolkesentralenLH/Views/Home/RegistrerTolk.cshtml
@@ -79,5 +79,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "RegistrerTolk")
+    @Html.ActionLink("ListeForTolker", "ListeAlleTolk")
 </div>
